--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,37 @@
 .gallery__link:hover {
   cursor: zoom-in;
 }
+
+.modal {
+  width: 500px;
+  padding: 20px;
+  user-select: none;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal img {
+  max-width: 400px;
+  height: 500px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.modal h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.modal h3 {
+  font-size: 1.2rem;
+  margin: 10px 0;
+}
+
+.modal p {
+  font-size: 1rem;
+  margin: 0;
+}
